--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
   "expo": {
+    "scheme": "your-app-scheme",
+
     "name": "expo-start",
     "slug": "expo-start",
     "version": "1.0.0",
@@ -24,6 +26,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": ["expo-router"]
   }
 }
