--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
   "expo": {
     "scheme": "your-app-scheme",
-
     "name": "expo-start",
     "slug": "expo-start",
     "version": "1.0.0",
@@ -22,11 +21,14 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.expostart"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"]
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
